<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/gray">

    <Button
        android:id="@+id/addItem"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/lightBlue"
        android:text="@string/addItem"
        android:textColor="@color/silver"/>

    <Button
        android:id="@+id/recipes"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/addItem"
        android:layout_below="@+id/addItem"
        android:layout_marginTop="10dp"
        android:background="@color/lightPurple"
        android:text="@string/recipes"
        android:textColor="@color/silver"/>

    <Button
        android:id="@+id/items"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/addItem"
        android:layout_alignTop="@+id/recipes"
        android:background="@color/lightGreen"
        android:text="@string/items"
        android:textColor="@color/silver" />

</RelativeLayout>